--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
               <ul class="nav navbar-nav pull-right">
                 <li><a href="/">Home</a></li>
                 <li><a href="/welcome/about">About</a></li>
-                <li><a href="#about">Services</a></li>
+                <li><a href="/welcome/services">Services</a></li>
                 <li><a href="/welcome/contact">Contact</a></li>
               </ul>
             </div>
