--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -16,9 +16,9 @@
       </div>
     </div>
   </div>
-  <!-- <div class="row">
+  <div class="row visible-md visible-lg">
     <div class="gmap">
-      <div id="basic_map" style='width: auto; height: 400px;'></div>
+      <div id="basic_map" style='width: auto; height: 600px;'></div>
     </div>
   </div>
 </div>
@@ -36,4 +36,4 @@ handler.buildMap({ provider: { maxZoom: 13, backgroundColor: "#FFFFFF" }, intern
   handler.bounds.extendWith(markers);
   handler.fitMapToBounds();
 });
-</script> -->
+</script>
