--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<div class="welcome">
 <!-- Carousel
   ================================================== -->
   <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
@@ -46,6 +47,7 @@
       <span class="sr-only">Next</span>
     </a> -->
   </div><!-- /.carousel -->
+</div>
 
 
   <!-- Marketing messaging and featurettes
