--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -1,2 +1,248 @@
-<h1>Welcome#services</h1>
-<p>Find me in app/views/welcome/services.html.erb</p>
+<div class="container-fluid services-head">
+  <div class="row">
+    <div class="services services-body">
+      <div class="text-center">
+        <div class="tabbable tabbable-adjust">
+          <h1 style="color: #FFFFFF;">Menu</h1>
+          <hr>
+          <ul class="nav nav nav-pills nav-pills-adjust">
+            <li class="active"><a href="#massage" data-toggle="tab">Massage</a></li>
+            <li><a href="#wax" data-toggle="tab">Waxing</a></li>
+            <li><a href="#addon" data-toggle="tab">Add-ons</a></li>
+            <li><a href="#facial" data-toggle="tab">Facials</a></li>
+          </ul>
+          <hr>
+        </div>
+      </div>
+      <div class="container services-body-container">
+        <div class="tab-content">
+          <div class="tab-pane tab-pane-adjust active fade in" id="massage">
+            <h1>Massages by Get Pampered <small>Mini Spa</small></h1>
+            <hr>
+            <table class="table table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Service</th>
+                  <th>Description</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>60 Minutes</td>
+                  <td>Massage</td>
+                  <td>$60</td>
+                </tr>
+                <tr>
+                  <td>90 MinutesMassage</td>
+                  <td>Massage</td>
+                  <td>$85</td>
+                </tr>
+                <tr>
+                  <td>Mineral Salt Scrub Therapy</td>
+                  <td>Body Treatment</td>
+                  <td>$85</td>
+                </tr>
+                <tr>
+                  <td>Body Foliation Therapy</td>
+                  <td>Body Treatment</td>
+                  <td>$85</td>
+                </tr>
+                <tr>
+                  <td>Power Recovery Therapy</td>
+                  <td>Body Treatment</td>
+                  <td>$85</td>
+                </tr>
+                <tr>
+                  <td>Nourishing Sea Mud Therapy</td>
+                  <td>Body Treatment</td>
+                  <td>$85</td>
+                </tr>
+                <tr>
+                  <td>Mud Massage Therapy</td>
+                  <td>Body Treatment</td>
+                  <td>$85</td>
+                </tr>
+                <tr>
+                  <td>Thermal Touch Back Purification</td>
+                  <td>Body Treatment</td>
+                  <td>$85</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="tab-pane tab-pane-adjust fade in" id="wax">
+            <h1>Waxing by Get Pampered <small>Mini Spa</small></h1>
+            <hr>
+            <table class="table table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Service</th>
+                  <th>Description</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Eyebrows</td>
+                  <td>Wax</td>
+                  <td>$12</td>
+                </tr>
+                <tr>
+                  <td>Lip</td>
+                  <td>Wax</td>
+                  <td>$10</td>
+                </tr>
+                <tr>
+                  <td>Bikini</td>
+                  <td>Wax</td>
+                  <td>$30</td>
+                </tr>
+                <tr>
+                  <td>Legs</td>
+                  <td>Wax</td>
+                  <td>$45</td>
+                </tr>
+                <tr>
+                  <td>Brazillian wax</td>
+                  <td>Wax (WOMEN ONLY)</td>
+                  <td>$65</td>
+                </tr>
+                <tr>
+                  <td>Face</td>
+                  <td>Wax</td>
+                  <td>$40</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="tab-pane tab-pane-adjust fade in" id="addon">
+            <h1>Add-ons by Get Pampered <small>Mini Spa</small></h1>
+            <hr>
+            <table class="table table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Service</th>
+                  <th>Description</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Paraffin Wax for Hands or Feet</td>
+                  <td>Wax</td>
+                  <td>$5</td>
+                </tr>
+                <tr>
+                  <td>Foot Scrub</td>
+                  <td>with sea salt</td>
+                  <td>$5</td>
+                </tr>
+                <tr>
+                  <td>Detox Foot Scrub</td>
+                  <td>Dermalogica products</td>
+                  <td>$10</td>
+                </tr>
+                <tr>
+                  <td>30 Minute</td>
+                  <td>Foot Massage</td>
+                  <td>$40</td>
+                </tr>
+                <tr>
+                  <td>60 Minute</td>
+                  <td>Foot Massage</td>
+                  <td>$65</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="tab-pane tab-pane-adjust fade in" id="facial">
+            <h1>Facials by Get Pampered <small>Mini Spa</small></h1>
+            <hr>
+            <table class="table table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Service</th>
+                  <th>Description</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Relaxing Facial</td>
+                  <td>Scalp, neck, shoulder &amp; hand massage included</td>
+                  <td>$50</td>
+                </tr>
+                <tr>
+                  <td>Anti-aging Facial</td>
+                  <td>Hydration serums, fine-line &amp; wrinkles, neck massage included</td>
+                  <td>$60</td>
+                </tr>
+                <tr>
+                  <td>Brightening Facial</td>
+                  <td>Serums for pigmentation, sun damage, hydration &amp; neck massage included</td>
+                  <td>$10</td>
+                </tr>
+                <tr>
+                  <td>Adult Acne Facial</td>
+                  <td>Clearing serums, extractions &amp; hydration</td>
+                  <td>$60</td>
+                </tr>
+                <tr>
+                  <td>Teen Acne Facials</td>
+                  <td>Clearing serums, extractions, hydration</td>
+                  <td>$45</td>
+                </tr>
+                <tr>
+                  <td>Ion Active Facial</td>
+                  <td>Dermalogica Professional: retinol 1%, pigmentation, hylauronic acid, acneic</td>
+                  <td>$90</td>
+                </tr>
+                <tr>
+                  <td>Ion Active Facial Group Package</td>
+                  <td>Three people, 45 minute treatment each (immediate results)</td>
+                  <td>$230</td>
+                </tr>
+                <tr>
+                  <td>Ion Active Facial Group Package</td>
+                  <td>Six people, 45 minute treatment each (immediate results)</td>
+                  <td>$460</td>
+                </tr>
+                <tr>
+                  <td>Microdermabrasion</td>
+                  <td>Professional service</td>
+                  <td>$60</td>
+                </tr>
+                <tr>
+                  <td>Chemical Peels</td>
+                  <td>WITH FACIAL</td>
+                  <td>$15</td>
+                </tr>
+                <tr>
+                  <td>Level 1 Chemical Peel</td>
+                  <td>WITHOUT FACIAL</td>
+                  <td>$25</td>
+                </tr>
+                <tr>
+                  <td>Level 2 Chemical Peel</td>
+                  <td>WITHOUT FACIAL</td>
+                  <td>$45</td>
+                </tr>
+                <tr>
+                  <td>Level 3 Chemical Peel</td>
+                  <td>WITHOUT FACIAL</td>
+                  <td>$60</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="about-me-paragraph-2">
+          <p>Body Treatments are customized to either energize or reduce stress.  Exfoliating your skin or detoxifying your Skin will renew healthy cell turnover to give an all over Body Glow!  Body Treatments are soothing, relaxing and nourishing to your skin, as well as helping with blood circulation.  I believe we need to take care of not just oour face, but our whole body.  Moisturizing, conditioning, hydrating, polishes, protects, with natural oils, peptides and antioxidants.  Body Treatments are very Therapeutic!</p>
+          <br>
+          <span class="about-button pull-right"><%= link_to "Contact me", welcome_contact_path %></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
