--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -23,6 +23,11 @@
   border-color: $rose-brown !important;
 }
 
+.table > caption + thead > tr:first-child > th, .table > caption + thead > tr:first-child > td, .table > colgroup + thead > tr:first-child > th, .table > colgroup + thead > tr:first-child > td, .table > thead:first-child > tr:first-child > th, .table > thead:first-child > tr:first-child > td {
+  font-size: 20px;
+  font-style: oblique;
+}
+
 .services {
   background-color: rgba(89, 57, 57, 0.4);
 }
