--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="contact-page">
+    <div class="contact-page hidden-xs">
       <div class="text-center book-appointment">
         <h1>Contact me</h1>
       </div>
