adjustments to welcome index image, and typos on services

--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -181,7 +181,7 @@
                 <tr>
                   <td>Brightening Facial</td>
                   <td>Serums for pigmentation, sun damage, hydration &amp; neck massage included</td>
-                  <td>$10</td>
+                  <td>$65</td>
                 </tr>
                 <tr>
                   <td>Adult Acne Facial</td>
@@ -238,7 +238,7 @@
           </div>
         </div>
         <div class="about-me-paragraph-2">
-          <p>Body Treatments are customized to either energize or reduce stress.  Exfoliating your skin or detoxifying your Skin will renew healthy cell turnover to give an all over Body Glow!  Body Treatments are soothing, relaxing and nourishing to your skin, as well as helping with blood circulation.  I believe we need to take care of not just oour face, but our whole body.  Moisturizing, conditioning, hydrating, polishes, protects, with natural oils, peptides and antioxidants.  Body Treatments are very Therapeutic!</p>
+          <p>Body Treatments are customized to either energize or reduce stress.  Exfoliating your skin or detoxifying your Skin will renew healthy cell turnover to give an all over Body Glow!  Body Treatments are soothing, relaxing and nourishing to your skin, as well as helping with blood circulation.  I believe we need to take care of not just our face, but our whole body.  Moisturizing, conditioning, hydrating, polishes, protects, with natural oils, peptides and antioxidants.  Body Treatments are very Therapeutic!</p>
           <br>
           <span class="about-button pull-right"><%= link_to "Contact me", welcome_contact_path %></span>
         </div>
