ion active image

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -100,7 +100,7 @@
           <p class="lead">Get Pampered Mini Spa delivers natural-looking, safe and effective results with the latest non-surgical cosmetic treatments, including microdermabrasion, physician-designed facials, chemical peels and a healthy lifestyle.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <%= image_tag("IMG_3965.jpg", class: "featurette-image img-responsive center-block") %>
+          <%= image_tag("1465366122_ion active 2.jpg", class: "featurette-image img-responsive center-block") %>
         </div>
       </div>
     </div>
