--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -200,12 +200,12 @@
                 </tr>
                 <tr>
                   <td>Ion Active Facial Group Package</td>
-                  <td>Three people, 45 minute treatment each (immediate results)</td>
+                  <td>Three treatments, 45 minute treatment each (immediate results)</td>
                   <td>$230</td>
                 </tr>
                 <tr>
                   <td>Ion Active Facial Group Package</td>
-                  <td>Six people, 45 minute treatment each (immediate results)</td>
+                  <td>Six treatments, 45 minute treatment each (immediate results)</td>
                   <td>$460</td>
                 </tr>
                 <tr>
