replace rejuvinate photo

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="item">
-        <%= image_tag('spa2.jpg') %>
+        <%= image_tag('massage_room.jpg') %>
         <div class="container">
           <div class="carousel-caption">
             <h1>Rejuvinate</h1>
