favicon, footer year

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable-no">
    <%= stylesheet_link_tag    "application", media: "all" %>
    <%= javascript_include_tag "application" %>
+    <%= favicon_link_tag('favicon.ico') %>
    <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Josefin+Sans" rel="stylesheet">
    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEl9IJhygmkSDoY6zwZX7QqXzMiz-uRe4&callback=initMap"
   type="text/javascript"></script>
@@ -49,7 +50,7 @@
 <div class="container-fluid footer">
     <footer>
       <p class="pull-right">262-949-2950</p>
-      <p>&copy; 2016 Get Pampered Mini Spa &middot;</p>
+      <p>&copy; 2017 Get Pampered Mini Spa &middot;</p>
     </footer>
   </div>
 </body>
