--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
     <div class="carousel-inner carousel-inner-adjust" role="listbox">
       <small class="pull-right lake-geneva-wisconsin">Lake Geneva, Wisconsin</small>
       <div class="item active">
-        <%= image_tag('back_view_salon.jpeg') %>
+        <%= image_tag('back-view.jpg') %>
         <div class="container">
           <div class="carousel-caption">
             <h1>Relax</h1>
