--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="item">
-        <%= image_tag('spa1.jpg') %>
+        <%= image_tag('spa12.jpg') %>
         <div class="container">
           <div class="carousel-caption">
             <h1>Revive</h1>
@@ -61,19 +61,19 @@
     <!-- Three columns of text below the carousel -->
     <div class="row marketing-circles">
       <div class="col-sm-4 col-md-4 col-lg-4">
-        <%= image_tag('Cruiseline-625x400-c-default.jpg', class: 'img-circle', width: '140', height: '140') %>
+        <%= image_tag('Cruiseline.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Neighbors</h2>
         <p>Founded in 2015, we know the local community and care about our fellow neighbors, friends and visitors of Lake Geneva, Wisconsin.  Stop in today for a friendly and free consultation.</p>
         <!-- <p><a class="btn btn-default" href="#" role="button">Contact us &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-sm-4 col-md-4 col-lg-4">
-        <%= image_tag('IMG_3968.JPG', class: 'img-circle', width: '140', height: '140') %>
+        <%= image_tag('skin_specialist.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Skin Specialist</h2>
         <p>As a skin care specialist, Certified with Dermalogica Products, Get Pampered Mini Spa offers many services priced affordable, one on one treatment.  Get the Spa experience WITHOUT the Resort Spa prices!</p>
         <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-sm-4 col-md-4 col-lg-4">
-        <%= image_tag('oils.jpg', class: 'img-circle', width: '140', height: '140') %>
+        <%= image_tag('oils-4.jpg', class: 'img-circle', width: '140', height: '140') %>
         <h2>Essentials</h2>
         <p>We offer an array of essential and personalized services inspired by local and ancient skin care traditions to help you battle aging, acne, dark-spots and other skin conditions.</p>
         <!-- <p><a class="btn btn-default" href="#" role="button">Book an appointment &raquo;</a></p> -->
@@ -90,7 +90,7 @@
           <p class="lead white-lead">Get Pampered Mini Spa microdermabrasion treatments are aging skin's worst enemy because they lift all the incriminating skin that makes us look older and reveal the youthful, radiant skin that lies beneath.  Safe and effective for most skin types and tones, microdermabrasion treatments help to improve the texture of the skin as well as help address some forms of acne, oily skin, blackheads and whiteheads.  Recommended for men and woman.</p>
         </div>
         <div class="col-md-5">
-          <%= image_tag("14980826_354692821533000_3070654926771623352_n.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
+          <%= image_tag("bed.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
         </div>
       </div>
     </div>
@@ -114,7 +114,7 @@
           <p class="lead white-lead">Underneath your skin is a brighter, smoother and more refined complexion waiting to be revealed. Chemical peels can help bring that out, instantly. Whether you want to reduce discoloration caused by sun damage, clear up breakouts or smooth away the look of wrinkles, chemical peels are proven to noticeably improve your skin in more ways than one.</p>
         </div>
         <div class="col-md-5">
-          <%= image_tag("facial.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
+          <%= image_tag("facial-2.jpg", class: "featurette-image featurette-image-1 img-responsive center-block") %>
         </div>
       </div>
     </div>
