--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="col-xs-12 contact-section">
       <div class="location col-md-8 col-md-offset-2 text-center">
-        <%= image_tag('mom.jpeg', class: 'img-circle', width: '140', height: '140') %>
+        <%= image_tag('tree.jpeg', class: 'img-circle', width: '140', height: '140') %>
         <h1 class="contact-title">Get Pampered <small>Mini Spa<small></h1>
         <h5>Tuesday thru Saturday 10AM–6PM, Closed Sunday and Monday</h5>
         <h1>Stacey Pacholczak</h1>
