--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,6 @@
   <meta charset="utf-8"/>
   <head><title><%= @title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable-no">
-  <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
   <%= favicon_link_tag('favicon.ico') %>
   <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Josefin+Sans" rel="stylesheet">
   <meta itemprop="description" name="description" content="As a skin care specialist, Certified with Dermalogica Products, Get Pampered Mini Spa offers many services priced affordable, one on one treatment. Get the Spa experience WITHOUT the Resort Spa prices!">
@@ -23,12 +21,19 @@
   <meta name="apple-mobile-web-app-title" content="Get Pampered">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta itemprop="openingHours" content="Tu-Sa 10:00-18:00">
-  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-  <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
+  <script async src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js">
+  // google map marker
+  </script>
     <%= csrf_meta_tags %>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEl9IJhygmkSDoY6zwZX7QqXzMiz-uRe4&callback=initMap" type="text/javascript">
+    // google api
   </script>
-  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-101805408-1', 'auto');ga('send', 'pageview');</script>
+  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-101805408-1', 'auto');ga('send', 'pageview');
+  // google analytics
+  </script>
+
   </head>
   <body>
   <div class="hidden hidden-getpampered" itemprop="dayspa" itemscope itemtype="http://schema.org/LocalBusiness">
