seo and price change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= favicon_link_tag('favicon.ico') %>
   <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Josefin+Sans" rel="stylesheet">
   <meta itemprop="description" name="description" content="As a skin care specialist, Certified with Dermalogica Products, Get Pampered Mini Spa offers many services priced affordable, one on one treatment. Get the Spa experience WITHOUT the Resort Spa prices!">
-  <meta name="keywords" content="Lake Geneva, Wisconins, anti-aging facial, dermaplaning, skin specialist, essential services, massage, microdermabrasion, chemical peels, waxing, eyebrows wax, lip wax, bikini wax, legs wax, braxillian wax, face wax, foot message, foot scrub ">
+  <meta name="description" content="<%= @seo_description %>">
+  <meta name="keywords" content="<%= @seo_keyword %>">
   <%= favicon_link_tag('favicon.ico', rel: "icon") %>
   <%= favicon_link_tag('favicon.ico', rel: "apple-touch-icon") %>
   <meta name="twitter:card" content="summary" />
@@ -77,7 +78,7 @@
   <div class="container-fluid footer">
     <footer>
       <span itemprop="telephone" class="pull-right">262-949-2950</span>
-      <p>&copy; 2017 Get Pampered Mini Spa &middot;</p>
+      <p>&copy; 2018 Get Pampered Mini Spa &middot;</p>
       <a class="hidden hidden-getpampered" itemprop="url" href="http://www.getpampered.io">www.getpampered.io</a>
     </footer>
   </div>
