--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,4 +1,6 @@
-<% @title ="Contact | Get Pampered mini spa | Lake Geneva, Wisconsin" %>
+<% @title = "Get Pampered | Contact me" %>
+<meta name="description" content="<%= @seo_description = "Contact me throughout the week.  My schedule books fast, so call ahead!" %>">
+<meta name="keywords" content="<%= @seo_keyword = "Contact Get Pampered Mini Spa" %>">
 <div class="container-fluid">
   <div class="row">
     <div class="contact-page hidden-xs">
