--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
-<% @title ="Get Pampered mini spa | Skin Specialist | Essential Services | Massages | Microdermabrasion | Lake Geneva, Wisconsin" %>
-
+<% @title = "Get Pampered mini spa | Lake Geneva, Wisconsin" %>
+<meta name="description" content="<%= @seo_description = "Get pampered with a message, relaxing facial, and many other aesthetical treatments in Lake Geneva, Wisconsin " %>">
+<meta name="keywords" content="<%= @seo_keyword = "Massage Lake Geneva, Wisconsin, skin specialist Lake Geneva Wisconsin, essential services, massage, microdermabrasion, chemical peels, waxing, eyebrows wax Lake Geneva Wisconsin, lip wax Lake Geneva Wisoncsin, bikini wax Lake Geneva Wisconins, legs wax Lake Geneva Wisconsin, braxillian wax Lake Geneva Wisoncsin, face wax Lake Geneva Wisoncsin" %>">
 <div class="welcome">
 <!-- Carousel
   ================================================== -->
@@ -17,7 +18,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Relax</h1>
-            <p class="carousel-text">Full body massage starting at $60</p>
+            <p class="carousel-text">Full body massage starting at $35</p>
           </div>
         </div>
       </div>
