--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -1,4 +1,7 @@
-<% @title ="Services | Get Pampered mini spa | Lake Geneva, Wisconsin" %>
+<% @title = "Get Pampered | Services" %>
+<meta name="description" content="<%= @seo_description = "Services and prices for Get Pampered Mini Spa in Lake Geneva Wisconsin" %>">
+<meta name="keywords" content="<%= @seo_keyword = "Best Message in Lake Geneva Wisconsin, Best skin specialist Lake Geneva Wisconsin, Best eyebrows wax Lake Geneva Wisconsin, Best lip wax Lake Geneva Wisoncsin, Best bikini wax Lake Geneva Wisconins, best leg wax Lake Geneva Wisconsin, Best braxillian wax Lake Geneva Wisoncsin, Best face wax Lake Geneva Wisoncsin" %>">
+
 <div itemscope itemtype="http://schema.org/Service" class="container-fluid services-head" role="main">
   <div class="row">
     <div class="services services-body">
@@ -32,12 +35,27 @@
                 <tr>
                   <td>60 Minutes</td>
                   <td>Massage</td>
+                  <td>$35</td>
+                </tr>
+                <tr>
+                  <td>60 Minutes</td>
+                  <td>Massage</td>
                   <td>$60</td>
                 </tr>
                 <tr>
                   <td>90 Minutes</td>
                   <td>Massage</td>
                   <td>$85</td>
+                </tr>
+                <tr>
+                  <td>30 Minutes</td>
+                  <td>Foot Massage/Reflexology</td>
+                  <td>$40</td>
+                </tr>
+                <tr>
+                  <td>30 Minutes</td>
+                  <td>Foot Massage/Reflexology</td>
+                  <td>$70</td>
                 </tr>
               </tbody>
             </table>
@@ -55,14 +73,19 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Eyebrows</td>
+                  <td>Brows</td>
                   <td>Wax</td>
-                  <td>$12</td>
+                  <td>$15</td>
                 </tr>
                 <tr>
-                  <td>Lip</td>
+                  <td>Lip/Chin/Nose/Ears</td>
                   <td>Wax</td>
-                  <td>$10</td>
+                  <td>$10 each</td>
+                </tr>
+                <tr>
+                  <td>Face</td>
+                  <td>Wax</td>
+                  <td>$60</td>
                 </tr>
                 <tr>
                   <td>Bikini</td>
@@ -70,19 +93,34 @@
                   <td>$30</td>
                 </tr>
                 <tr>
+                  <td>High Bikini</td>
+                  <td>Wax</td>
+                  <td>$45</td>
+                </tr>
+                <tr>
                   <td>Legs</td>
                   <td>Wax</td>
                   <td>$45</td>
                 </tr>
                 <tr>
-                  <td>Brazillian wax</td>
-                  <td>Wax (WOMEN ONLY)</td>
-                  <td>$65</td>
+                  <td>Underarms</td>
+                  <td>Wax</td>
+                  <td>$30</td>
                 </tr>
                 <tr>
-                  <td>Face</td>
+                  <td>Brazillian wax</td>
+                  <td>Wax (WOMEN ONLY)</td>
+                  <td>$65 <small>add $15 if not trimmed</small></td>
+                </tr>
+                <tr>
+                  <td>Back</td>
                   <td>Wax</td>
-                  <td>$40</td>
+                  <td>$50</td>
+                </tr>
+                <tr>
+                  <td>Chest</td>
+                  <td>Wax</td>
+                  <td>$60</td>
                 </tr>
               </tbody>
             </table>
@@ -112,7 +150,7 @@
                 <tr>
                   <td>Detox Foot Scrub</td>
                   <td>Dermalogica products</td>
-                  <td>$10</td>
+                  <td>$15</td>
                 </tr>
                 <tr>
                   <td>30 Minute</td>
@@ -165,27 +203,12 @@
                   <td>$45</td>
                 </tr>
                 <tr>
-                  <td>Ion Active Facial</td>
-                  <td>Dermalogica Professional: retinol 1%, pigmentation, hylauronic acid, acneic</td>
-                  <td>$90</td>
-                </tr>
-                <tr>
-                  <td>Ion Active Facial Group Package</td>
-                  <td>Three treatments, 45 minute treatment each (immediate results)</td>
-                  <td>$230</td>
-                </tr>
-                <tr>
-                  <td>Ion Active Facial Group Package</td>
-                  <td>Six treatments, 45 minute treatment each (immediate results)</td>
-                  <td>$460</td>
-                </tr>
-                <tr>
                   <td>Microdermabrasion</td>
                   <td>Professional service</td>
                   <td>$60</td>
                 </tr>
                 <tr>
-                  <td>Chemical Peels</td>
+                  <td>Chemical Peel</td>
                   <td>WITH FACIAL</td>
                   <td>$15</td>
                 </tr>
