--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,38 +2,38 @@
 <html itemscope itemtype="http://schema.org/DaySpa">
   <head lang="en">
   <meta charset="utf-8"/>
-  <head><title><%= @title %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable-no">
-  <%= favicon_link_tag('favicon.ico') %>
-  <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Josefin+Sans" rel="stylesheet">
-  <meta itemprop="description" name="description" content="As a skin care specialist, Certified with Dermalogica Products, Get Pampered Mini Spa offers many services priced affordable, one on one treatment. Get the Spa experience WITHOUT the Resort Spa prices!">
-  <meta name="description" content="<%= @seo_description %>">
-  <meta name="keywords" content="<%= @seo_keyword %>">
-  <%= favicon_link_tag('favicon.ico', rel: "icon") %>
-  <%= favicon_link_tag('favicon.ico', rel: "apple-touch-icon") %>
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="www.getpampered.io" />
-  <meta name="twitter:title" content="Lake Geneva Mini Spa | Essential Care for Your Body" />
-  <meta name="twitter:description" content="We know the local community at www.getpampered.io, and care about our fellow neighbors, friends and visitors of Lake Geneva, Wisconsin. Stop in today for a friendly and free consultation." />
-  <meta property="og:title" content="Get Pampered Mini Spa" />
-  <meta property="og:url" content="www.getpampered.io" />
-  <meta name="application-name" content="Get Pampered"/>
-  <meta name="msapplication-TileColor" content="#101010"/>
-  <meta name="apple-mobile-web-app-title" content="Get Pampered">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta itemprop="openingHours" content="Tu-Sa 10:00-18:00">
-  <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
-  <script async src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js">
-  // google map marker
-  </script>
-    <%= csrf_meta_tags %>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEl9IJhygmkSDoY6zwZX7QqXzMiz-uRe4&callback=initMap" type="text/javascript">
-    // google api
-  </script>
-  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-101805408-1', 'auto');ga('send', 'pageview');
-  // google analytics
-  </script>
+  <head>
+    <title><%= @title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable-no">
+    <%= favicon_link_tag('favicon.ico') %>
+    <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Josefin+Sans" rel="stylesheet">
+    <meta name="description" content="<%= @seo_description %>">
+    <meta name="keywords" content="<%= @seo_keyword %>">
+    <%= favicon_link_tag('favicon.ico', rel: "icon") %>
+    <%= favicon_link_tag('favicon.ico', rel: "apple-touch-icon") %>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="www.getpampered.io" />
+    <meta name="twitter:title" content="Lake Geneva Mini Spa | Essential Care for Your Body" />
+    <meta name="twitter:description" content="We know the local community at www.getpampered.io, and care about our fellow neighbors, friends and visitors of Lake Geneva, Wisconsin. Stop in today for a friendly and free consultation." />
+    <meta property="og:title" content="Get Pampered Mini Spa" />
+    <meta property="og:url" content="www.getpampered.io" />
+    <meta name="application-name" content="Get Pampered"/>
+    <meta name="msapplication-TileColor" content="#101010"/>
+    <meta name="apple-mobile-web-app-title" content="Get Pampered">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta itemprop="openingHours" content="Tu-Sa 10:00-18:00">
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <script async src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js">
+    // google map marker
+    </script>
+      <%= csrf_meta_tags %>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEl9IJhygmkSDoY6zwZX7QqXzMiz-uRe4&callback=initMap" type="text/javascript">
+      // google api
+    </script>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-101805408-1', 'auto');ga('send', 'pageview');
+    // google analytics
+    </script>
 
   </head>
   <body>
