--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -14,6 +14,7 @@
             <li><a href="#wax" data-toggle="tab">Waxing</a></li>
             <li><a href="#addon" data-toggle="tab">Add-ons</a></li>
             <li><a href="#facial" data-toggle="tab">Facials</a></li>
+            <li><a href="#eye" data-toggle="tab">Eyelash extensions</a></li>
           </ul>
           <hr>
         </div>
@@ -35,17 +36,17 @@
                 <tr>
                   <td>30 Minutes</td>
                   <td>Massage</td>
-                  <td>$35</td>
+                  <td>$40</td>
                 </tr>
                 <tr>
                   <td>60 Minutes</td>
                   <td>Massage</td>
-                  <td>$60</td>
+                  <td>$70</td>
                 </tr>
                 <tr>
                   <td>90 Minutes</td>
                   <td>Massage</td>
-                  <td>$85</td>
+                  <td>$95</td>
                 </tr>
                 <tr>
                   <td>30 Minutes</td>
@@ -53,7 +54,7 @@
                   <td>$40</td>
                 </tr>
                 <tr>
-                  <td>30 Minutes</td>
+                  <td>60 Minutes</td>
                   <td>Foot Massage/Reflexology</td>
                   <td>$70</td>
                 </tr>
@@ -226,6 +227,31 @@
                   <td>Level 3 Chemical Peel</td>
                   <td>WITHOUT FACIAL</td>
                   <td>$60</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="tab-pane tab-pane-adjust fade in" id="eye">
+            <h1>Eyelash Extensions by Get Pampered <small>Mini Spa</small></h1>
+            <hr>
+            <table class="table table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Service</th>
+                  <th>Description</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Eyelash Extensions</td>
+                  <td>Classic</td>
+                  <td>$125</td>
+                </tr>
+                <tr>
+                  <td>Eyelash Extensions</td>
+                  <td>Premium</td>
+                  <td>$140</td>
                 </tr>
               </tbody>
             </table>
