--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -1,6 +1,6 @@
 <% @title = "Get Pampered | Services" %>
 <meta name="description" content="<%= @seo_description = "Services and prices for Get Pampered Mini Spa in Lake Geneva Wisconsin" %>">
-<meta name="keywords" content="<%= @seo_keyword = "Best Message in Lake Geneva Wisconsin, Best skin specialist Lake Geneva Wisconsin, Best eyebrows wax Lake Geneva Wisconsin, Best lip wax Lake Geneva Wisoncsin, Best bikini wax Lake Geneva Wisconins, best leg wax Lake Geneva Wisconsin, Best braxillian wax Lake Geneva Wisoncsin, Best face wax Lake Geneva Wisoncsin" %>">
+<meta name="keywords" content="<%= @seo_keyword = "Message in Lake Geneva Wisconsin, Best skin specialist Lake Geneva Wisconsin, Best eyebrows wax Lake Geneva Wisconsin, Best lip wax Lake Geneva Wisoncsin, Best bikini wax Lake Geneva Wisconins, best leg wax Lake Geneva Wisconsin, Best braxillian wax Lake Geneva Wisoncsin, Best face wax Lake Geneva Wisoncsin" %>">
 
 <div itemscope itemtype="http://schema.org/Service" class="container-fluid services-head" role="main">
   <div class="row">
